fix auth panel columns vertical alignment

--- a/frontend/app/components/auth-panel/auth-panel.scss
+++ b/frontend/app/components/auth-panel/auth-panel.scss
@@ -3,4 +3,5 @@
   justify-content: space-between;
   font-size: 14px;
   line-height: 16px;
+  align-items: baseline;
 }
